# slame_robot-studio

./: .gitignore  README.md  TODO_web_joystick_keyboard_debug.md  debug_once_boot.sh  enter_test_mode_once.sh  improved_hotspot.sh  nav2_simple_params.yaml  network_manager.sh  optimize_corridor_navigation.sh  project_manager.py  robot-studio  robot-studio-debug-once.service  robot-studio.service  robot_api_server.py  ros2_web_bridge.py  safe_shutdown.sh  service_monitor.sh  simple_map_saver.py  start_path_planning.sh  start_robot_studio.sh  stop_path_planning.sh  stop_robot_studio.sh  system_info.sh  test_websocket_connection.html  web_interface_server.py
android_app/: build.gradle  settings.gradle
android_app/app/: build.gradle
aurora_app/: README.md  TODO_上位机整合调研.md
core/config/: setup_wifi_hotspot.sh
core/docs/: ROBOT_STUDIO_README.md  WIFI_HOTSPOT_SETUP.md
core/scripts/: fix_wifi_hotspot.sh  install_autostart.sh  install_dependencies.sh  start_robot_studio_fixed.sh
data/aurora_maps/: auroramap_test.stcm
robotstudio/aurora_project/: CMakeLists.txt  GUI_README.md  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_JETSON_NANO.md  WORKFLOW_GUIDE.md  analyze_xyz.py  aurora_gui.py  build_gui.py  build_project.sh  complete_processing.sh  filter_xyz.py  install_dependencies_ubuntu.sh  requirements.txt  run_processing.sh  simple_processing.sh  start_aurora_gui.sh  test_gui.py  test_map_id_validation.cpp  test_output.xyz  test_system.sh
robotstudio/aurora_project/data/: building_elements_detected.ply  colored_point_cloud.ply  colored_point_cloud.xyz  walls_enhanced_cloud.ply
robotstudio/aurora_project/docs/: PROJECT_PLAN.md
robotstudio/aurora_project/scripts/: advanced_building_detection.sh  extract_point_cloud.sh  process_point_cloud_walls.sh
robotstudio/aurora_project/src/: advanced_building_detector.cpp  aurora_point_extractor_fixed.cpp  aurora_sdk_test.cpp  cloud_processor.cpp  cloud_processor.h  cloud_processor_main.cpp  cloud_processor_tool_utf8.cpp  cloud_viewer.cpp  cloud_visualizer.cpp  cloud_visualizer.h  colored_point_extractor.cpp  door_window_detector.cpp  door_window_detector_advanced.cpp  door_window_detector_advanced.h
robotstudio/cxx/: slamtec_remote_public.hxx
scripts/: package.ps1
src/: aurora_vision_recorder.py
src/acamana/: CMakeLists.txt  package.xml
src/acamana/config/: acamana.rviz  acamana_params.yaml
src/acamana/launch/: display.launch.py  gazebo.launch.py  robot_publishers.launch.py  robot_publishers_ignition.launch.py  robot_static_tf.launch.py  rviz_complete.launch.py  test_robot.launch.py  test_robot_ignition.launch.py  topic_relay.launch.py
src/acamana/meshes/: base_link.STL  left_front_wheel.STL  left_rear_wheel.STL  left_steering_hinge.STL  right_front_wheel.STL  right_rear_wheel.STL  right_steering_hinge.STL
src/acamana/models/acamana/: model.config
src/acamana/models/acamana/meshes/: base_link.STL  left_front_wheel.STL  left_rear_wheel.STL  left_steering_hinge.STL  right_front_wheel.STL  right_rear_wheel.STL  right_steering_hinge.STL
src/acamana/scripts/: ackermann_system_validator.py  topic_relay_node.py
src/acamana/urdf/: acamana.gazebo  acamana.urdf.xacro  acamana2.urdf  acamana_ignition.urdf.xacro
src/acamana/worlds/: empty.sdf  empty.world
src/ackermann_controller/: CMakeLists.txt  package.xml
src/ackermann_controller/ackermann_controller/: enhanced_kinematics.py
src/ackermann_controller/config/: control.rviz
src/ackermann_controller/launch/: control.launch.py
src/ackermann_controller/scripts/: ackermann_controller_node.py  unified_ackermann_controller.py  validation_test.py
src/ackermann_description/: CMakeLists.txt  package.xml
src/aurora_explorer/: CMakeLists.txt  package.xml
src/aurora_explorer/aurora_explorer/: mrtsp_optimizer.py  optimized_frontier_detector.py  real_time_map_optimizer.py  robust_state_manager.py  room_aware_explorer.py
src/aurora_explorer/config/: enhanced_robust_params.yaml  exploration.rviz  exploration_rviz.rviz  explore.rviz  optimized_robust_params.yaml  tad_explore_params.yaml
src/aurora_explorer/launch/: explore.launch.py  robust_exploration.launch.py
src/aurora_explorer/scripts/: map_saver.py  parallel_computation_manager.py  path_safety_optimizer.py  predictive_frontier_detector.py  quick_validation.py  robust_explore_node.py  sensor_range_detector.py  test_enhanced_exploration.py  test_parallel_computation.py  test_sensor_range_switching.py  validate_exploration_features.py
src/aurora_remote_public/: version.txt
src/hardware_interface/: package.xml  setup.py
src/nav2_configs/: CMakeLists.txt  package.xml  setup.py
src/nav2_configs/behavior_trees/: ackermann_navigate_to_pose.xml  custom_recovery_bt.xml
src/nav2_configs/config/: nav2_path_visualization.rviz
src/nav2_configs/launch/: ackermann_nav2_launch.py  ackermann_slam_nav2_launch.py  simple_slam_launch.py
src/nav2_configs/params/: ackermann_nav2_params.yaml  ackermann_nav2_params.yaml.advanced_backup_1752649275  ackermann_nav2_params.yaml.stage5_backup_1752650211  ackermann_nav2_params.yaml.success_rate_backup_1752649847  ackermann_nav2_params_clean.yaml  simple_nav2_params.yaml  test_nav2_params.yaml
src/room_coverage_planner/: CMakeLists.txt  package.xml
src/room_coverage_planner/config/: coverage.rviz
src/room_coverage_planner/launch/: coverage_planning.launch.py
src/room_coverage_planner/scripts/: coverage_planner_node.py  path_visualizer.py
src/slamware_ros_sdk/: CMakeLists.txt  README-EN.md  README.md  package.xml
src/slamware_sdk/: CMakeLists.txt
tools/: package_colmap_sfm.sh  validate_colmap_sfm.py
web_interface/: TEST_OFFLINE_ACCESS.md  clear_cache.html  index.html  robot.html  welcome.html
web_interface/js/: map-display.js  robot-control.js  websocket-client.js
windows_control_center/: README.md  RobotStudioControlCenter.sln
windows_control_center/RobotStudioControlCenter/: AppSettings.cs  AuroraRemoteHost.cs  InputFriendlyWebView2.cs  MainForm.cs  NetworkProbe.cs  Program.cs  RobotStudioControlCenter.csproj  SettingsStore.cs  Win32.cs
(+72 files in other folders)
